--- a/KanjiBattle/app/src/main/res/layout/activity_main.xml
+++ b/KanjiBattle/app/src/main/res/layout/activity_main.xml
@@ -30,14 +30,28 @@
                     android:orientation="vertical"
                     android:background="#FFFFF0">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="#ffaaaa"
-                        android:fontFamily="casual"
-                        android:text="Practice"
-                        android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
+                        android:layout_height="wrap_content"
+                        android:background="#ffaaaa">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="25dp"
+                            android:fontFamily="casual"
+                            android:text="Practice"
+                            android:textSize="20dp"
+                            android:textStyle="bold"></TextView>
+
+                        <TextView
+                            android:id="@+id/scoretxt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="25dp"
+                            android:fontFamily="casual"
+                            android:text="\t\t\tlvl::"
+                            android:textSize="15dp"
+                            android:textStyle="bold"></TextView>
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/wrapping"
