--- a/KanjiBattle/app/src/main/res/layout/activity_game.xml
+++ b/KanjiBattle/app/src/main/res/layout/activity_game.xml
@@ -13,6 +13,11 @@
         android:orientation="vertical"
         android:layout_margin="20dp"
         android:weightSum="2">
+
+        <TextView
+            android:id="@+id/progress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></TextView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
